# Factorial-BenchMark

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Factorial.cpp  Factorial_BenchMark.cpp  README.md
